[package]
name = "botchang"
version = "0.1.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.63"
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
twitch-irc =  "4.0.0"
