[package]
name = "botchang"
version = "0.1.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.66.1"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twitch-irc = "5.0.0"
